<!-- Contains the English(Default) translations for this app.-->
<resources>
    <string name="app_name">PizzApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_confirm_order">Order 1/3</string>
    <string name="title_activity_insert_payment_info">Order 3/3</string>
    <string name="title_activity_select_pizza">Select pizza</string>
    <string name="title_activity_select_pizzeria">Select pizzeria</string>
    <string-array name="selection_filter">
        <item>Distance</item>
        <item>Popularity</item>
        <item>Pricing</item>
        <item>Delivery time</item>
        <item>Diet-friendly</item>
    </string-array>
    <string name="title_activity_order_history">Order history</string>
    <string-array name="pizzerias_array">
        <item>Eethuis Anatolia  15km    *****</item>
        <item>Doner Point       5km    ****</item>
        <item>Pizza Hut         2km    ***</item>
        <item>New York Pizza    7km    *****</item>
        <item>Domino\'s Pizza    3km    ***</item>
    </string-array>
    <string-array name="pizzas_array">
        <item>Pizza Hawaii     15cm    €9,25</item>
        <item>Pizza Tonno      15cm    €9,75</item>
        <item>Pizza Calzone    20cm    €13,50</item>
        <item>Pizza Shoarma    20cm    €12,50</item>
        <item>Pizza Margherita    20cm    €7,50</item>
        <item>Pizza Quattro Stagioni    20cm    €11,50</item>
    </string-array>
    <string-array name="previousOrders_array">
        <item>21-02-2015    18:36    €30,25</item>
        <item>02-03-2015    14:00    €8,26</item>
        <item>10-03-2015    22:12    €40,50</item>
    </string-array>

    <string-array name="selectedPizzas_array">
        <item>1    Pizza Hawaii    €9,25</item>
        <item>1    Pizza Quattro Stagioni    €11,50</item>
        <item>TOTAAL €20,75</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_home" translatable="false">PizzApp</string>
    <string name="title_activity_processing_payment">PizzApp</string>
    <string name="title_activity_order_completed">PizzApp</string>
    <string name="lbl_language">Language:</string>
    <string name="lbl_settings_settings">Settings</string>
    <string name="lbl_selectpizzeria_search">Find pizzeria</string>
    <string name="lbl_selectpizza_select">Select pizza</string>
    <string name="btn_insertpaymentinfo_creditcard" translatable="false">Creditcard</string>
    <string name="btn_insertpaymentinfo_ideal" translatable="false">iDeal</string>
    <string name="btn_insertpaymentinfo_cash">Cash</string>
    <string name="actionbar_vieworder">View order</string>
    <string name="btn_settings_confirmsettings">Confirm</string>
    <string name="title_activity_customer_info">Order 2/3</string>
    <string name="title_activity_history_detail_view">Order history</string>
    <string name="btn_home_orderpizza">Order pizza</string>
    <string name="btn_home_viewhistory">View history</string>
    <string name="btn_home_settings">Settings</string>
    <string name="lbl_confirmorder_extrainfo">Extra information(allergies etc.)</string>
    <string name="btn_confirmorder_addpizza">Add Pizza</string>
    <string name="btn_confirmorder_confirm">Confirm Order</string>
    <string name="title_activity_personalinfo" >Customer Info</string>
    <string name="lbl_personalinfo_name">Name</string>
    <string name="btn_personalinfo_confirm">Confirm</string>
    <string name="lbl_personalinfo_phone">Phone number</string>
    <string name="lbl_personalinfo_address">Address</string>
    <string name="lbl_personalinfo_email">E-mail</string>
    <string name="lbl_processingpayment_processing">Processing payment...</string>
    <string name="lbl_end">Your order has been completed.  \n Thank you for using PizzApp!</string>

</resources>
