<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/relativeID">

    <ImageView
        android:layout_width="387dp"
        android:layout_height="218dp"
        android:id="@+id/imageView3"
        android:src="@drawable/pizzasharing"
        android:longClickable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_personalinfo"
        android:id="@+id/textView3"
        android:textSize="30dp"
        android:textColor="#fff2fff8"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/tbName"
        android:hint="@string/lbl_personalinfo_name"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/tbEmail"
        android:hint="@string/lbl_personalinfo_email"
        android:layout_below="@+id/tbName"
        android:layout_centerHorizontal="true"
        android:autoText="false" />

    <EditText
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:hint="@string/lbl_personalinfo_address"
        android:id="@+id/tbAdres"
        android:layout_below="@+id/tbEmail"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/tbTel"
        android:hint="@string/lbl_personalinfo_phone"
        android:layout_below="@+id/tbAdres"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/btn_personalinfo_confirm"
        android:id="@+id/btnConfirm"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp" />

</RelativeLayout>