<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.etienne.pizzapp.HomeActivity"
    android:orientation="vertical">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:id="@+id/orderPizzaButton"
        android:textSize="16pt"
        android:text="@string/btn_home_orderpizza"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:id="@+id/orderHistoryButton"
        android:textSize="16pt"
        android:text="@string/btn_home_viewhistory"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:id="@+id/settingsButton"
        android:textSize="16pt"
        android:text="@string/btn_home_settings"/>
</LinearLayout>
