<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.etienne.pizzapp.InsertPaymentInfo"
    android:orientation="vertical">

    <Button
        android:id="@+id/creditcardButton"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:textSize="16pt"
        android:text="@string/btn_insertpaymentinfo_creditcard"
        />

    <Button
        android:id="@+id/idealButton"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:textSize="16pt"
        android:text="@string/btn_insertpaymentinfo_ideal"
        />

    <Button
        android:id="@+id/cashButton"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:textSize="16pt"
        android:text="@string/btn_insertpaymentinfo_cash"
        />

</LinearLayout>
